# booster_controller

./: .gitignore  CMakeLists.txt  package.xml
include/booster_controller/: controller_interface.hpp  interpolator.hpp  joint.hpp  mode_transition_controller.hpp  set_joint_controller.hpp  torque_controller.hpp  trajectory_controller.hpp
include/booster_controller/controller/: mode_transition_controller.hpp  set_joint_controller.hpp  torque_controller.hpp  trajectory_controller.hpp
include/booster_controller/controller_manager/: controller_manager.hpp  controller_manager_node.hpp
include/booster_controller/interface/: controller_interface.hpp
include/booster_controller/joint_manager/: joint_manager.hpp
include/booster_controller/joint_state_manager/: joint_state_manager.hpp
include/booster_controller/node/: controller_manager_node.hpp  joint_transition_handler.hpp
include/booster_controller/utils/: command_constructor.hpp  interpolator.hpp  joint_command.hpp  joint_maps.hpp
include/booster_joint_manager/: interpolator.hpp  joint.hpp  trajectory_controller.hpp
include/booster_joint_manager/joint_manager/: joint_manager.hpp
include/booster_joint_manager/node/: joint_manager_node.hpp  joint_transition_handler.hpp
include/booster_joint_manager/robot_mode_validator/: robot_mode_validator.hpp
include/booster_joint_manager/utils/: command_constructor.hpp  joint_maps.hpp
src/: interpolator.cpp  main.cpp  mode_transition_controller.cpp  read_joints.cpp  set_joint_controller.cpp  torque_controller.cpp  trajectory_controller.cpp
src/controller/: mode_transition_controller.cpp  set_joint_controller.cpp  torque_controller.cpp  trajectory_controller.cpp
src/controller_manager/: controller_manager.cpp  controller_manager_node.cpp  joint_manager.cpp
src/joint_manager/: joint_manager.cpp
src/joint_state_manager/: joint_state_manager.cpp
src/node/: controller_manager_node.cpp  joint_manager_node.cpp  joint_transition_handler.cpp
src/robot_mode_validator/: robot_mode_validator.cpp
src/utils/: command_constructor.cpp  interpolator.cpp  joint_mapping.cpp
